# ft_ls

./: .gitignore  CMakeLists.txt  Makefile  README.md  ft_ls  ft_lstmap.c  ft_strlcat.c
ft_printf/: .gitignore  Makefile
includes/: ft_ls.h
libft/: ft_strsplit_word.c
libft/tests/: test_ft_strlcat.c
src/: .window_size.c  file.c  file_info.c  ft_ls_file.c  ft_ls_file_info.c  ft_ls_put.c  main.c  parse.c  put.c  put_list_file.c  sort.c  sort_utils.c  utils.c
