cmake_minimum_required(VERSION 3.2)
set(NAME ft_ls)
project(${NAME} C)
file(GLOB SRC src/*.c)
include_directories(includes libft ft_printf/include)
link_directories(libft)
add_executable(${NAME} ${SRC})
target_link_libraries(${NAME} ft ft_printf -lexplain)
add_subdirectory(libft)
add_subdirectory(ft_printf)
